# amazing-3.1

./: .gitignore  Amazing3.1.mq4  Amazing3.1.mq4.bak  README.md  amazing31_python.py  backtest_usdchf.py  optimize_usdchf_10y_pre_blowup.py  optimize_usdchf_10y_target100_no_blowup.py  optimize_usdchf_params.py  optimized_params_10y_no_blowup_max_profit.json  optimized_params_10y_pre_blowup.json  optimized_params_10y_target100_no_blowup.json  optimized_params_audnzd_10y_dd80_rust.json
download/: audnzd-m5-bid-2006-12-12T00-01-2007-02-26.csv  audnzd-m5-bid-2008-02-28-2009-02-27.csv  audnzd-m5-bid-2010-03-01-2011-03-01.csv  audnzd-m5-bid-2012-03-02-2013-03-02.csv  audnzd-m5-bid-2014-03-04-2015-03-04.csv  audnzd-m5-bid-2015-03-05-2016-03-04.csv  audnzd-m5-bid-2016-03-05-2017-03-05.csv  audnzd-m5-bid-2017-03-06-2018-03-06.csv  audnzd-m5-bid-2018-03-07-2019-03-07.csv  audnzd-m5-bid-2020-03-08-2021-03-08.csv  audnzd-m5-bid-2021-03-09-2022-03-09.csv  audnzd-m5-bid-2023-03-11-2024-03-10.csv  audnzd-m5-bid-2025-03-18-2025-03-19.csv  usdchf-m5-bid-2025-03-18-2025-03-19.csv
rust_optimizer/: Cargo.toml
rust_optimizer/src/: amazing31_mt4.rs  main.rs
