[package]
name = "rust_optimizer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
csv = "1.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
